Added logo and nav bar fortesting

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
 
   <body>
+    <div class = "logo_nav_bar">
+      <div class = "flex-item" style = "flex: 1">
+          <h1> Test </h1>
+      </div>
+    </div>  
+    
     
     <nav>
     <div class="nav_bar" >
