first try on fixing the css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class = "logo_nav_bar">
       <div class = "flex-item" style = "flex: 1">
-          <h1> Test </h1>
+          <h1> insert logo here </h1>
       </div>
     </div>  
     
