tried fixing css in logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
   <body>
     <div class = "logo_nav_bar">
-      <div class = "flex-item" style = "flex: 1">
+          <h1> test if centered </h1>
+      <div class = "logo-item" style = "flex: 1">
           <h1> insert logo here </h1>
       </div>
     </div>  
