--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
     </div>
     
     <div class ="flex-container3">
-      <div class ="flex-item" style="flex: 1">
+      <div class ="skills-auto-item" style="flex: 1">
         <h1>Skills</h1>
         <p>testskills</p>
       </div>  
-      <div class ="flex-item" style="flex: 1">
+      <div class ="skills-auto-item" style="flex: 1">
         <h1>Autobiography</h1>
         <p>testAutoBio</p>
       </div>
