still testing the flex-item

--- a/index.html
+++ b/index.html
@@ -60,22 +60,10 @@
             <h1>4</h1>
             <p>This is another paragraph</p>
         </div>
-        <div class="flex-item" style="flex: 3;">
-            <h1>5</h1>
-            <p>This is another paragraph</p>
-            <p>This is another paragraph</p>
-            <p>This is another paragraph</p>
-            <p>This is another paragraph</p>
-            <p>This is another paragraph</p>
-        </div>
-        <div class="flex-item" style="flex: 1;">
-            <h1>6</h1>
-            <p>This is another paragraph</p>
-        </div>
     </div>
     
     <div class="flex-container3">
-        <div class ="skills-auto-item" style="flex: 1">
+        <div class ="flex-item" style="flex: 1">
           <h1>Skills</h1>
           <p>testskills</p>
         </div>  
