--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
   <body>
     <div class = "logo_nav_bar">
-          <h1> test if centered </h1>
-      <div class = "flex-item" style = "flex: 1">
+      <div class = "nav-item" style = "flex: 1">
           <h1> insert logo here </h1>
       </div>
     </div>  
@@ -49,12 +48,12 @@
             <h1>2</h1>
             <p>This is another paragraph</p>
         </div>
-        <div class="flex-item" style="flex: 2;">
+        <div class="flex-item" style="flex: 3;">
             <h1>3</h1>
             <p>This is another paragraph</p>
             <p>This is another paragraph</p>
         </div>
-        <div class="flex-item" style="flex: 4;">
+        <div class="flex-item" style="flex: 3;">
             <h1>4</h1>
             <p>This is another paragraph</p>
         </div>
