fixed colorings and added featured photo

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </div>
     </nav>
 
-    <div class="flex-container">
-        <div class="flex-item" style="flex: 5;">
-            <h1> Insert pic here </h1>
+    <div class="featured-photo">
+        <div class="featured-item" style="flex: 10;">
+            <img src="ProfilePhoto.jpg" alt="Featured Photo">
         </div>
     </div>
         
