Added pictures and a description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class = "logo_nav_bar">
       <div class = "nav-item" style = "flex: 1">
-          <h1> insert logo here </h1>
+          <img src="Choncc.png" alt="Logo here">
       </div>
     </div>  
     
@@ -41,8 +41,9 @@
     
     <div class="previousProjects-container">
         <div class="project-item" style="flex: 3;">
-            <h1>proj1</h1>
-            <p>Insert specifications here..</p>
+            <h3>City Pollution Reduction Optimization App</h3>
+            <img src="150ProjectPic.png" alt="Project and Pollution Optimization">
+            <p>By using optimization and linear programming, I created an app that could find the number of desired projects with optimal pollution gathered. </p>
         </div>
         <div class="project-item" style="flex: 3;">
             <h1>proj2</h1>
