Added separate div class for project pictures

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
     <div class="previousProjects-container">
         <div class="project-item" style="flex: 3;">
             <h3>City Pollution Reduction Optimization App</h3>
-            <img src="150ProjectPic.png" alt="Project and Pollution Optimization">
+            <div class="project-pictures" style="flex:1;">
+                <img src="150ProjectPic.png" alt="Project and Pollution Optimization">
+            </div>
             <p>By using optimization and linear programming, I created an app that could find the number of desired projects with optimal pollution gathered. </p>
         </div>
         <div class="project-item" style="flex: 3;">
