Fixed CSS (added display: flex to some items)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Sample Web Page</title>
+    <title>Fortunato - Portfolio</title>
     <link rel="stylesheet" type="text/css" href="flex.css" />
 
   </head>
@@ -18,13 +18,13 @@
     <nav>
     <div class="nav_bar" >
         <div class="flex-item" style="flex: 1">
-            <a href="/html/">HTML</a> |
+            <a href="/html/">HTML</a> 
         </div>
         <div class="flex-item" style="flex: 1">
             <a href="/css/">CSS</a>
         </div> 
-    |   <div class="flex-item" style="flex: 1">
-            <a href="/js/">JavaScript</a> |
+        <div class="flex-item" style="flex: 1">
+            <a href="/js/">JavaScript</a> 
         </div>
         <div class="flex-item" style="flex: 1">
             <a href="/python/">Python</a>
