Added the 3 other projects

--- a/index.html
+++ b/index.html
@@ -48,16 +48,25 @@
             <p>By using optimization and linear programming, I created an app that could find the number of desired projects with optimal pollution gathered. </p>
         </div>
         <div class="project-item">
-            <h1>proj2</h1>
-            <p>Insert specifications here..</p>
+            <h3>ICS Registration Planner</h3>
+            <div class="project-pictures">
+                <img src="Project2.jpg" alt="ICS Registration Planner">
+            </div>
+            <p>With the use of Java and CSS, this app lets you plan your schedule for the following semester in UPLB.</p>
         </div>
         <div class="project-item">
-            <h1>proj3</h1>
-            <p>Insert specifications here..</p>
+            <h3>ICS Registration Planner</h3>
+            <div class="project-pictures">
+                <img src="Project3.jpg" alt="Python Crossword Puzzle">
+            </div>
+            <p>An interactive crossword puzzle game using Python.</p>
         </div>
         <div class="project-item">
-            <h1>proj4</h1>
-            <p>Insert specifications here..</p>
+            <h3>"Flappy" Game</h3>
+            <div class="project-pictures">
+                <img src="Project4.jpg" alt="Flappy Game">
+            </div>
+            <p>A "Flappy" Game using Unity.</p>
         </div>
     </div>
     
