Removed the nav bar, and fixed CSS styling

--- a/index.html
+++ b/index.html
@@ -13,24 +13,6 @@
           <img src="Choncc.png" alt="Logo here">
       </div>
     </div>  
-    
-    
-    <nav>
-    <div class="nav_bar" >
-        <div class="flex-item" style="flex: 1">
-            <a href="/html/">HTML</a> 
-        </div>
-        <div class="flex-item" style="flex: 1">
-            <a href="/css/">CSS</a>
-        </div> 
-        <div class="flex-item" style="flex: 1">
-            <a href="/js/">JavaScript</a> 
-        </div>
-        <div class="flex-item" style="flex: 1">
-            <a href="/python/">Python</a>
-        </div>
-    </div>
-    </nav>
 
     <div class="featured-photo">
         <div class="featured-item">
@@ -55,7 +37,7 @@
             <p>With the use of Java and CSS, this app lets you plan your schedule for the following semester in UPLB.</p>
         </div>
         <div class="project-item">
-            <h3>ICS Registration Planner</h3>
+            <h3>Python Interactive Crossword Puzzle</h3>
             <div class="project-pictures">
                 <img src="Project3.jpg" alt="Python Crossword Puzzle">
             </div>
