Added skills part

--- a/index.html
+++ b/index.html
@@ -57,8 +57,25 @@
     
     <div class="skills-auto-container">
         <div class ="skills-auto-item">
-          <h1>Skills</h1>
-          <p>testskills</p>
+            <h1>Skills</h1>
+            <ul class="skills-list">
+                <li>
+                    <strong>Java & OOP</strong>
+                    <span class="skill-desc">Applied Object-Oriented principles to build the <em>ICS Registration Planner</em>.</span>
+                </li>
+                <li>
+                    <strong>Python Scripting</strong>
+                    <span class="skill-desc">Developed logic for the <em>Interactive Crossword Puzzle</em>.</span>
+                </li>
+                <li>
+                    <strong>Game Development (Unity/C#) </strong>
+                    <span class="skill-desc">Started learning about game physics and mechanics</span>
+                </li>
+                <li>
+                    <strong>Algorithms & Optimization</strong>
+                    <span class="skill-desc">Utilized linear programming for the <em>City Pollution Reduction App</em></span>
+                </li>
+            </ul>
         </div>  
         <div class ="skills-auto-item">
           <h1>Autobiography</h1>
