Added css design to logo and feature photo

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     </div>  
 
     <div class="featured-photo">
+        <div class="feature-title">
+            <h1>Angelo Fortunato</h1>
+            <p>Computer Science Graduate & Developer</p>
+        </div>
         <div class="featured-item">
             <img src="ProfilePhoto.jpg" alt="Featured Photo">
         </div>
