--- a/index.html
+++ b/index.html
@@ -84,8 +84,15 @@
             </div>
         </div>  
         <div class ="skills-auto-item">
-          <h1>Autobiography</h1>
-          <p>testAutoBio</p>
+            <h1>Autobiography</h1>
+            <div class="bio-content">
+                <p>
+                    My name is <strong>Angelo Fortunato</strong>, and I have always been interested in how things work, whether it's the systems that shape our society or niche innovations that serve a purpose.
+                </p>
+                <p>
+                    I am a graduate of <strong>BS Computer Science</strong> at the <strong>University of the Philippines Los Banos</strong>. My journey was not all sunshines and rainbows, every hardship shaped me and forged who I am today: a person who is curious, resilient and willing to make a change in the world.
+                </p>
+            </div>
         </div>
     </div> 
   </body>
