Added footer section

--- a/index.html
+++ b/index.html
@@ -90,10 +90,31 @@
                     My name is <strong>Angelo Fortunato</strong>, and I have always been interested in how things work, whether it's the systems that shape our society or niche innovations that serve a purpose.
                 </p>
                 <p>
-                    I am a graduate of <strong>BS Computer Science</strong> at the <strong>University of the Philippines Los Banos</strong>. My journey was not all sunshines and rainbows, every hardship shaped me and forged who I am today: a person who is curious, resilient and willing to make a change in the world.
+                    I am a graduate of <strong>BS Computer Science</strong> at the <strong>University of the Philippines Los Baños</strong>. My journey was not all sunshines and rainbows, every hardship shaped me and forged who I am today: a person who is curious, resilient and willing to make a change in the world.
                 </p>
             </div>
         </div>
     </div> 
+
+    <footer class="site-footer">
+        <div class="footer-content">
+            <div class = "footer-logo">
+                <img src="Choncc.png" alt ="Footer logo">
+            </div>
+            <div class = "footer info">
+                <p><strong>Angelo Fortunato</strong></p>
+                <p>University of the Philippines Los Baños</p>
+                <p>Email: <a href="mailto:mgfortunato@up.edu.ph">mgfortunato@up.edu.ph</a></p>
+                <p>© 2026 Angelo Fortunato. All rights reserved</p>
+            </div>
+        </div>
+    </footer>
+
+
+
+
+
+
+
   </body>
 </html>
